fixed alignment of hightlight text quote and logo image on mobile

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -171,7 +171,7 @@ body {
 
 .highlight_text{
   position:absolute;
-  top: 292px;
+  top: 330px;
   left:24%;
   max-width:800px;
   margin:0 auto;
@@ -656,9 +656,10 @@ nav li a:hover{
   .address_block{
     max-width: 100%;
   }
+
   .highlight_text{
     top:450px
-}
+  }
 
 }
 
@@ -667,6 +668,11 @@ nav li a:hover{
   .dami_logo,
   .dami_logo_home{
     visibility: hidden;
+  }
+
+  .header img {
+    top: 5px;
+    width: 80px;
   }
 
   .bio_pic_img{
